promotional-product N-DURO z-index fixed

--- a/blocks/main/promotional-product/promotional-product.css
+++ b/blocks/main/promotional-product/promotional-product.css
@@ -14,8 +14,8 @@
   padding-bottom: 20px;
   padding-left: 27px;
   border-radius: 20px;
-  background: rgba(40, 98, 119, 0.5);
-  backdrop-filter: blur(2px);
+  /* background: rgba(40, 98, 119, 0.5); */
+  /* backdrop-filter: blur(2px); */
   position: relative;
   z-index: 1;
   /* border: 1px solid orange; */
@@ -23,9 +23,22 @@
   transform: translateY(-220px);
 }
 
+.promotional-product::before {
+  content: '';
+  background: rgba(40, 98, 119, 0.5);
+  backdrop-filter: blur(2px);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 20px;
+  z-index: -5;
+}
+
 .promotional-product__title {
   color: #fff;
-  font-family: 'Kelson Sans RU';
+  font-family: 'Kelson Sans RU', sans-serif;
   font-size: 80px;
   font-style: normal;
   font-weight: 400;
@@ -79,7 +92,7 @@ b {
   position: absolute;
   bottom: -36%;
   right: 8%;
-  z-index: 1;
+  z-index: -10;
 }
 .promotional-product__variant_canister {
   position: absolute;
